--- a/GameData/SXT/Parts/Aviation/Aero/Wing/part.cfg
+++ b/GameData/SXT/Parts/Aviation/Aero/Wing/part.cfg
@@ -33,7 +33,7 @@ PART
 
 	// --- standard part parameters ---
 	mass = 0.05
-	thermalMassModifier = 8.0 // 4.0 // the dang things are light, so 3200 kJ/tonne-K
+	thermalMassModifier = 6.0 // 8.0 // 4.0 // reducing to 24 KJoule a ton.  Not designed for reentry or supersonic flight.
 	emissiveConstant = 0.95
 	dragModelType = none
 	maximum_drag = 0.02
@@ -41,10 +41,10 @@ PART
 	breakingForce = 110
 	breakingTorque = 110
 	angularDrag = 2
-	crashTolerance = 20
-	maxTemp = 2400 // 2000
+	crashTolerance = 7 // 20 // Not designed to touch other objects while moving at more than a crawl.   
+	maxTemp = 1800 // 2200 // 2000 -- Not designed for reentry or supersonic flight 
 	bulkheadProfiles = srf
-	explosionPotential = 0.1
+	explosionPotential = 0.5
 	fuelCrossFeed = True
 
 	tags = #LOC.SXT_SXTWingSmall_tags // #SXTWingSmall_tags = aero aircraft fligh foil lift plane
